change to flow coroutine

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ buildscript {
     ext.rxjava3_retrofit_adapter_version = "3.0.0"
     ext.lifecycle_version = "2.2.0"
 
+    ext.kotlin_coroutines_version = "1.3.9"
+    ext.lifecycle_version = "2.2.0"
+
     repositories {
         google()
         jcenter()
